force-app/main/default/objects/Custom_Clearance__c/Custom_Clearance__c.object-meta.xml
<CustomObject>
    <customHelpPage>page_CustomClearanceOnlineHelp</customHelpPage>
    <description>Custom Clearance</description>
    <label>通関</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Custom Clearance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>