force-app/main/default/objects/Custom_Clearance__c/fields/AccountNO__c.field-meta.xml
<CustomField>
    <fullName>AccountNO__c</fullName>
    <label>BANK/DEFFERED ACCOUNT FOR TAX PAYMENT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>