force-app/main/default/objects/Custom_Clearance__c/fields/CarrierCost__c.field-meta.xml
<CustomField>
    <fullName>CarrierCost__c</fullName>
    <label>COMPANY PAY FOR CARRIER COST</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Payment by Subcontractor</fullName>
                <default>true</default>
                <label>Advanced Payment by Subcontractor</label>
            </value>
            <value>
                <fullName>Our company</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>