force-app/main/default/objects/Custom_Clearance__c/fields/CCDescription__c.field-meta.xml
<CustomField>
    <fullName>CCDescription__c</fullName>
    <label>CUSTOMS REMARKS</label>
    <type>TextArea</type>
</CustomField>