force-app/main/default/objects/Custom_Clearance__c/fields/CustomCategory__c.field-meta.xml
<CustomField>
    <fullName>CustomCategory__c</fullName>
    <label>REGULATORY CATEGORY</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Normal Customs Clearance</fullName>
                <default>true</default>
                <label>Normal Customs Clearance</label>
            </value>
            <value>
                <fullName>Customs Clearance - Special Act. For Tax Reduction</fullName>
            </value>
            <value>
                <fullName>Customs Clearance - Food Quarantine</fullName>
            </value>
            <value>
                <fullName>Customs Clearance - Medical Quarantine</fullName>
            </value>
            <value>
                <fullName>Customs Clearance - Animal Quarantine</fullName>
            </value>
            <value>
                <fullName>Customs Clearance - Plant Quarantine</fullName>
            </value>
            <value>
                <fullName>ATA CARNET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>