force-app/main/default/objects/Custom_Clearance__c/fields/CustomeClearanceRep__c.field-meta.xml
<CustomField>
    <fullName>CustomeClearanceRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIC OF CUSTOMS CLEARANCE BROKER</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.CustomerClearance_broker__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>CC_Rep</relationshipName>
    <type>Lookup</type>
</CustomField>