force-app/main/default/objects/Custom_Clearance__c/fields/CustomerClearance_Contact__c.field-meta.xml
<CustomField>
    <fullName>CustomerClearance_Contact__c</fullName>
    <label>CONTACT OF CUSTOMS CLEARANCE BROKER</label>
    <type>TextArea</type>
</CustomField>