force-app/main/default/objects/Custom_Clearance__c/fields/CUSTOMS_APPLICATION_SUBMISSION_DATE__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMS_APPLICATION_SUBMISSION_DATE__c</fullName>
    <label>CUSTOMS APPLICATION SUBMISSION DATE</label>
    <type>Date</type>
</CustomField>