force-app/main/default/objects/Custom_Clearance__c/fields/CUSTOMS_OFFICER_CODE__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMS_OFFICER_CODE__c</fullName>
    <label>CUSTOMS OFFICER CODE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>