force-app/main/default/objects/Custom_Clearance__c/fields/Customs_Release_Day__c.field-meta.xml
<CustomField>
    <fullName>Customs_Release_Day__c</fullName>
    <label>CUSTOMS CLEARANCE PERMIT DATE</label>
    <type>Date</type>
</CustomField>