force-app/main/default/objects/Custom_Clearance__c/fields/CustomsClearanceStatus__c.field-meta.xml
<CustomField>
    <fullName>CustomsClearanceStatus__c</fullName>
    <label>CUSTOMS CLEARANCE STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CustomsClearanceStatus</valueSetName>
    </valueSet>
</CustomField>