force-app/main/default/objects/Custom_Clearance__c/fields/DeclarationNo__c.field-meta.xml
<CustomField>
    <fullName>DeclarationNo__c</fullName>
    <label>APPLICATION DECLARATION NO</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>