force-app/main/default/objects/Custom_Clearance__c/fields/InvoiceNo__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNo__c</fullName>
    <label>INVOICE NO/CONTRACT NO</label>
    <type>TextArea</type>
</CustomField>