force-app/main/default/objects/Custom_Clearance__c/fields/ManufactureDeclareType__c.field-meta.xml
<CustomField>
    <fullName>ManufactureDeclareType__c</fullName>
    <label>Declaration Type for Manufacturing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ManufactureDeclareType</valueSetName>
    </valueSet>
</CustomField>