force-app/main/default/objects/Custom_Clearance__c/fields/Merchant_s_Declared_Value__c.field-meta.xml
<CustomField>
    <fullName>Merchant_s_Declared_Value__c</fullName>
    <label>MERCHANT&apos;S DECLARED VALUE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>