force-app/main/default/objects/Custom_Clearance__c/fields/TAXPaymentType__c.field-meta.xml
<CustomField>
    <fullName>TAXPaymentType__c</fullName>
    <label>TAX PAYMENT TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Payment by Our company</fullName>
            </value>
            <value>
                <fullName>Direct Payment</fullName>
            </value>
            <value>
                <fullName>Deferred Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>