force-app/main/default/objects/Custom_Clearance__c/recordTypes/BondedTransportation.recordType-meta.xml
<RecordType>
    <fullName>BondedTransportation</fullName>
    <active>true</active>
    <description>transporting cargos imported from a foreign country into another bonded area in the original form of foreign goods</description>
    <label>Bonded Transportation</label>
</RecordType>