force-app/main/default/objects/Custom_Clearance__c/recordTypes/CC_Air_Export.recordType-meta.xml
<RecordType>
    <fullName>CC_Air_Export</fullName>
    <active>true</active>
    <description>To manage Export Customs Clearance for Air cargo.</description>
    <label>Air Export</label>
</RecordType>