force-app/main/default/objects/Custom_Clearance__c/recordTypes/CC_Air_Import.recordType-meta.xml
<RecordType>
    <fullName>CC_Air_Import</fullName>
    <active>true</active>
    <description>To manage Import Customs Clearance for Air cargo.</description>
    <label>Air Import</label>
</RecordType>