force-app/main/default/objects/Custom_Clearance__c/recordTypes/CC_InlandExport.recordType-meta.xml
<RecordType>
    <fullName>CC_InlandExport</fullName>
    <active>true</active>
    <description>To manage Export Customs Clearance when cargo is transported by truck.</description>
    <label>Inland Export</label>
</RecordType>