force-app/main/default/objects/Custom_Clearance__c/recordTypes/CC_InlandImport.recordType-meta.xml
<RecordType>
    <fullName>CC_InlandImport</fullName>
    <active>true</active>
    <description>To manage Import Customs Clearance when cargo is transported by truck.</description>
    <label>Inland Import</label>
</RecordType>