force-app/main/default/objects/Custom_Clearance__c/recordTypes/CC_Ocean_Export.recordType-meta.xml
<RecordType>
    <fullName>CC_Ocean_Export</fullName>
    <active>true</active>
    <description>To manage Export Customs Clearance for Ocean cargo.</description>
    <label>Ocean Export</label>
</RecordType>