force-app/main/default/objects/Custom_Clearance__c/recordTypes/CC_Ocean_Import.recordType-meta.xml
<RecordType>
    <fullName>CC_Ocean_Import</fullName>
    <active>true</active>
    <description>To manage Import Customs Clearance for Ocean cargo.</description>
    <label>Ocean Import</label>
</RecordType>