force-app/main/default/objects/Custom_Clearance__c/recordTypes/LogisticsService.recordType-meta.xml
<RecordType>
    <fullName>LogisticsService</fullName>
    <active>true</active>
    <label>Logistics</label>
</RecordType>