force-app/main/default/objects/Custom_Clearance__c/recordTypes/ManufacturingProcessing.recordType-meta.xml
<RecordType>
    <fullName>ManufacturingProcessing</fullName>
    <active>true</active>
    <label>Manufacturing Processing</label>
</RecordType>