force-app/main/default/objects/Custom_Clearance__c/validationRules/Permit_date_is_later_than_Submission_dat.validationRule-meta.xml
<ValidationRule>
    <fullName>Permit_date_is_later_than_Submission_dat</fullName>
    <active>true</active>
    <errorConditionFormula>CUSTOMS_APPLICATION_SUBMISSION_DATE__c  &gt; Customs_Release_Day__c</errorConditionFormula>
    <errorDisplayField>Customs_Release_Day__c</errorDisplayField>
    <errorMessage>Customs Clearance Permit date must be later than Submission Date.</errorMessage>
</ValidationRule>