force-app/main/default/objects/Custom_Clearance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HBL_SHIPMENT__c</columns>
    <columns>DeclarationNo__c</columns>
    <columns>Customs_Release_Day__c</columns>
    <columns>CustomJudgment__c</columns>
    <columns>CustomerClearance_broker__c</columns>
    <columns>CustomeClearanceRep__c</columns>
    <columns>CUSTOMS_OFFICER_CODE__c</columns>
    <columns>CUSTOMS_APPLICATION_SUBMISSION_DATE__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>Accounting_Manager</roleAndSubordinates>
        <roleAndSubordinates>Accounting_Staff</roleAndSubordinates>
        <roleAndSubordinates>Air_Export_Operation_Manager</roleAndSubordinates>
        <roleAndSubordinates>Air_Export_Operation_Staff</roleAndSubordinates>
        <roleAndSubordinates>Air_Import_Operation_Manager</roleAndSubordinates>
        <roleAndSubordinates>Air_Import_Operation_Staff</roleAndSubordinates>
        <roleAndSubordinates>Custom_Clearance_Manager</roleAndSubordinates>
        <roleAndSubordinates>Custom_Clearance_Staff</roleAndSubordinates>
        <roleAndSubordinates>Data_Entry_Manager</roleAndSubordinates>
        <roleAndSubordinates>Data_Entry_Staff</roleAndSubordinates>
        <roleAndSubordinates>Domestic_Sales_Manager</roleAndSubordinates>
        <roleAndSubordinates>Domestic_Sales_Staff</roleAndSubordinates>
        <roleAndSubordinates>Oversea_Sales_Manager</roleAndSubordinates>
        <roleAndSubordinates>Oversea_Sales_Staff</roleAndSubordinates>
        <roleAndSubordinates>Sea_Export_Operation_Manager</roleAndSubordinates>
        <roleAndSubordinates>Sea_Export_Operation_Staff</roleAndSubordinates>
        <roleAndSubordinates>Sea_Import_Operation_Manager</roleAndSubordinates>
        <roleAndSubordinates>Sea_Import_Operation_Staff</roleAndSubordinates>
        <roleAndSubordinates>Top_Executive</roleAndSubordinates>
        <roleAndSubordinates>Trucking_Manager</roleAndSubordinates>
        <roleAndSubordinates>Trucking_Operation_Staff</roleAndSubordinates>
    </sharedTo>
</ListView>