force-app/main/default/objects/Custom_Clearance__c/listViews/Inspected_Search_Permitted.listView-meta.xml
<ListView>
    <fullName>Inspected_Search_Permitted</fullName>
    <columns>NAME</columns>
    <columns>HBL_SHIPMENT__c</columns>
    <columns>ApplicationDescription__c</columns>
    <columns>Customs_Release_Day__c</columns>
    <columns>CustomJudgment__c</columns>
    <columns>PLACE_OF_ORIGIN__c</columns>
    <columns>CustomCategory__c</columns>
    <columns>CCDescription__c</columns>
    <columns>InvoiceNo__c</columns>
    <columns>Merchant_s_Declared_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CustomJudgment__c</field>
        <operation>notEqual</operation>
        <value>区分 - 1（検査なし)</value>
    </filters>
    <filters>
        <field>Customs_Release_Day__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Inspected Search-Permitted</label>
    <language>en_US</language>
</ListView>