force-app/main/default/objects/Custom_Clearance__c/listViews/Massive_Update_CC_Air_Export.listView-meta.xml
<ListView>
    <fullName>Massive_Update_CC_Air_Export</fullName>
    <columns>HBL_SHIPMENT__c</columns>
    <columns>NAME</columns>
    <columns>DeclarationNo__c</columns>
    <columns>Customs_Release_Day__c</columns>
    <columns>CustomJudgment__c</columns>
    <columns>CCDescription__c</columns>
    <columns>PLACE_OF_ORIGIN__c</columns>
    <columns>CustomCategory__c</columns>
    <columns>NO_OF_LINES_ON_PERMIT_NOTICE__c</columns>
    <columns>NO_OF_PAGES_ON_PERMIT_NOTICE__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Customs_Release_Day__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Custom_Clearance__c.CC_Air_Export</value>
    </filters>
    <label>Massive Update-CC Air Export</label>
    <language>en_US</language>
</ListView>